--- a/css/estilos.css
+++ b/css/estilos.css
@@ -253,7 +253,7 @@ nav li a:hover::after {
 
 .texto {
     grid-area: texto;
-    margin: 5rem;
+    margin: 3rem;
     font-family: 'ABeeZee', Verdana, sans-serif;
     font-size: 130%;
     
@@ -268,6 +268,11 @@ nav li a:hover::after {
     grid-area: map;
     margin: 2rem;
 }
+
+.map iframe {
+    width: 600px;
+    height: 450px;
+}
 /* ------ Fin estilos para main de pagina "Encuentranos" ------ */
 
 /* ------ Comienzan estilos para main de pagina "Contacto" ------ */
@@ -275,6 +280,7 @@ nav li a:hover::after {
     display: grid;
     grid-template-areas: 'texto  form';
     font-family: 'ABeeZee', Verdana, sans-serif;
+    justify-items: center;
 }
 
 .container {
@@ -285,15 +291,15 @@ nav li a:hover::after {
     margin-top: 2rem;
     padding: 1rem 3rem 0 3rem;
     margin-top: 2rem;
-    font-size: 2.5rem;
+    font-size: 2rem;
 }
 
 form {
-    width: 95%;
+    width: 75%;
     margin: 1rem;
     grid-area: form;
     background: rgba(100, 100, 100, 0.3);
-    padding: 5rem;
+    padding: 2rem 6rem;
     border-radius: 10px;
     font-family: 'Lato', Verdana, sans-serif;
 }
@@ -304,10 +310,11 @@ form h2 {
     text-align: center;
 }
 
-input, textarea {
+input, textarea, #boton {
     width: 100%;
     margin-bottom: 1.5rem;
     padding: 0.5rem;
+    font-family: 'Lato', Verdana, sans-serif;
     font-size: 0.8rem;
     border: none;
 }
@@ -319,6 +326,7 @@ textarea {
 }
 
 #boton {
+    font-weight: bolder;
     background-color: #612910;
     color: #D3A629;
 }
@@ -523,12 +531,20 @@ footer p {
         display: grid;
         grid-template-areas: 'texto'
                              'map';
+        justify-items: center;
+    }
+
+    .texto, .map iframe {
+        width: 80vw;
+        margin: 0.5rem;
+
     }
 
     .main-contacto {
         display: grid;
         grid-template-areas: 'texto'
                              'form';
+        justify-items: center;
     }
 
     .redes-container ul div {
@@ -536,12 +552,29 @@ footer p {
         justify-content: center;
     }
 
+    .subtitle {
+        font-size: 1.5rem;
+    }
+
     form {
-        width: 100%;
+        width: 80vw;
+        padding: 1rem 4rem;
     }
 }
 
 /* Estilos para Tablet */
-/* @media screen and (min-width: 768px) and (max-width: 1023px) {
+@media screen and (min-width: 768px) and (max-width: 1023px) {
+    .main-encuentranos {
+        display: grid;
+        grid-template-areas: 'texto'
+                             'map';
+        justify-items: center;
+    }
 
-} */
+    .main-contacto {
+        display: grid;
+        grid-template-areas: 'texto'
+                             'form';
+        justify-items: center;
+    }
+}
